fix: overflow + lightbox size

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -4,6 +4,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     position: relative;
+    overflow-x: hidden;
     &::after {
         content: "";
         position: absolute;
