--- a/src/sass/_product.scss
+++ b/src/sass/_product.scss
@@ -8,6 +8,7 @@
     .main-img {
         margin-bottom: $spacer * 2.125;
         max-width: 100vw;
+        pointer-events: none;
         
         @include media-breakpoint-up(sm) {
             margin-inline: 0;
@@ -16,6 +17,7 @@
         }
         @include media-breakpoint-up(lg) {
             cursor: zoom-in;
+            pointer-events: inherit;
         }
         .lightbox-show & {
             cursor: default;
@@ -103,11 +105,11 @@
 
         .lightbox-show & {
             opacity: 1;
-            pointer-events: all;
+            pointer-events: inherit;
         }
 
         .wrapper {
-            max-width: 800px;
+            width: min(40vw, 800px);
             display: flex;
             flex-direction: column;
             .close {
@@ -137,8 +139,8 @@
                 .swiper-button-next,
                 .swiper-button-prev {
                     display: flex;
-                    height: 70px;
-                    width: 70px;
+                    height: 50px;
+                    width: 50px;
                     svg {
                         transform: scale(1.2);
                     }
